cluster/apps/it-tools/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
  namespace: it-tools
  labels:
    app.kubernetes.io/name: it-tools
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: it-tools
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: it-tools
        # netpol.cilium.io/egress-to-kube-dns: "true"
        # netpol.cilium.io/ingress-from-ingress: "true"
        # netpol.cilium.io/ingress-from-prometheus: "true"
    spec:
      containers:
        - name: it-tools
          image: ghcr.io/sharevb/it-tools:nightly@sha256:90ba32f6ab338df7ae4a072e5f2d11cb6c43a291ffa325d08216f459ffeeb6f0
          ports:
            - name: http
              containerPort: 8080
